src/objects/BookedFlight__c.object
<CustomObject>
    <fields>
        <fullName>DateFrom__c</fullName>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTo__c</fullName>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flight__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flight</label>
        <referenceTo>Flight__c</referenceTo>
        <relationshipLabel>Booked Flights</relationshipLabel>
        <relationshipName>Booked_Flights</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Booked Flight</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Booked Flight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booked Flights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BookedValidationRule</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
Flight__c == NULL
)</errorConditionFormula>
        <errorMessage>Flight or addon can&apos;t be empty!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DateValidationRule</fullName>
        <active>true</active>
        <errorConditionFormula>DateFrom__c &gt; DateTo__c</errorConditionFormula>
        <errorMessage>DateFrom must be less than DateTo!</errorMessage>
    </validationRules>
</CustomObject>